Updated styling for Contact on mobile, fixed a tag for the linkedin

--- a/src/modules/styles/styles.css
+++ b/src/modules/styles/styles.css
@@ -339,7 +339,6 @@ main {
         opacity 0.3s ease;
     opacity: 1;
     position: absolute;
-    
 }
 
 .carousel-img {
@@ -415,7 +414,6 @@ main {
     justify-content: center;
     align-items: center;
     gap: 3%;
-
 }
 
 .tech-box {
@@ -681,5 +679,25 @@ main {
 
     .tech-name {
         font-size: 3svw;
+    }
+
+    .contact-wrapper {
+        gap: 0%;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .contact-text {
+        width: 30svw;
+        border-right: 0;
+        border-bottom: solid 1px var(--text-color);
+    }
+
+    .social-hub {
+        flex-direction: row;
+    }
+
+    .con-icon {
+        width: 10svw;
     }
 }
